tests/specs/ecosystem/yossydev/vite_rehype_toc/0_1_5.test
yossydev/vite-rehype-toc/0.1.5
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/vite-rehype-toc.ts
error: TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { Root };
         ~~~~
    at file://<tmpdir>/src/types.ts:36:10

